# system-monitor

./: CMakeLists.txt  CMakeUserPresets.json  README.md  cpp.hint
SystemMonitor/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
SystemMonitor/include/: CPUInfo.h  Converter.h  CustomChartView.h  CustomScrollBar.h  Disk.h  DiskChartView.h  DiskInfo.h  DisksInfo.h  GPU.h  GPUInfo.h  GPUsInfo.h  InfoWidget.h  InfoWidgetUI.h  MEMInfo.h  MainWindow.h  UsageChartView.h  WMIManager.h
SystemMonitor/include/Info/: CPUInfo.h  MEMInfo.h  WMIManager.h
SystemMonitor/include/InfoWidgets/: CPUInfoWidget.h  DiskInfoWidget.h  GPUInfoWidget.h  InfoWidget.h  MEMInfoWidget.h
SystemMonitor/src/: CPUInfo.cpp  Converter.cpp  CustomChartView.cpp  CustomScrollBar.cpp  Disk.cpp  DiskChartView.cpp  DiskInfo.cpp  DisksInfo.cpp  GPU.cpp  GPUInfo.cpp  GPUsInfo.cpp  InfoWidget.cpp  InfoWidgetUI.cpp  MEMInfo.cpp  MainWindow.cpp  UsageChartView.cpp  WMIManager.cpp
SystemMonitor/src/Info/: CPUInfo.cpp  DiskInfo.cpp  GPUInfo.cpp  MEMInfo.cpp  WMIManager.cpp
SystemMonitor/src/InfoWidgets/: CPUInfoWidget.cpp  DiskInfoWidget.cpp  GPUInfoWidget.cpp  InfoWidget.cpp  MEMInfoWidget.cpp
